# TwitchEmotes

./: pyproject.toml  requirements-dev.txt
TwitchEmotes/: __init__.py  config.py  emotes_list.py  exceptions.py  main.py
TwitchEmotes/services/: __init__.py
TwitchEmotes/services/base/: __init__.py  channel.py  emote.py  emote_set.py  service.py
TwitchEmotes/services/bttv/: __init__.py  bttv.py
TwitchEmotes/services/ffz/: __init__.py  ffz.py
TwitchEmotes/services/seventv/: __init__.py  channel.py  emote.py  emote_set.py  platform.py  seventtv.py  url.py
TwitchEmotes/services/twitch/: emote.py  twitch.py
TwitchEmotes/utils/: __init__.py  get_session.py
